DONE: Fix the overflow

--- a/src/features/profile/Profile.scss
+++ b/src/features/profile/Profile.scss
@@ -1,5 +1,3 @@
-
 .page {
-  overflow: scroll;
-  width: 2000px;
+
 }
