--- a/src/shared/footer/Footer.scss
+++ b/src/shared/footer/Footer.scss
@@ -3,7 +3,7 @@ footer {
     bottom: 0;
     width: 100%;
     padding: 20px;
-    position: fixed;
+    position: absolute;
     color: #FFFFFF;
     text-align: center !important;
 
