--- a/src/shared/overlay/Overlay.scss
+++ b/src/shared/overlay/Overlay.scss
@@ -29,8 +29,8 @@
 .overlay-languages {
     bottom: 0;
     width: 100%;
+    position: absolute;
     text-align: center;
-    position: fixed;
 }
 
 .overlay-content a {
